web-ui/deploy-gloo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  labels:
    app: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
        version: v1
    spec:
      serviceAccountName: webui
      containers:
        - image: pj3677/webui
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: webui
  labels:
    app: webui
spec:
  selector:
    app: webui
  ports:
    - port: 80
      name: http
      targetPort: 8080
